--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Environment variables
+.env
+
+# Local postgres data
+db_data/*
+
 # compiled output
 /dist
 /node_modules
@@ -32,4 +38,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.env
+
