--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,24 +21,28 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-    #   - restore_cache:
-    #       keys:
-    #         - v1-dependencies-{{ checksum "yarn.lock" }}
-    #         # fallback to using the latest cache if no exact match is found
-    #         - v1-dependencies-
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
-    #   - run: yarn install --ignore-engines
-    #   - run:
-    #       name: Check yarn.lock
-    #       command: git diff --exit-code yarn.lock
+      - run: cd api && yarn install --ignore-engines      
+      - run:
+          name: Check API yarn.lock
+          command: git diff --exit-code api/yarn.lock
 
-    #   - save_cache:
-    #       paths:
-    #         - node_modules
-    #         - packages/website/node_modules
-    #         - packages/api/node_modules
-    #         - /usr/local/share/.cache/yarn/v4/
-    #       key: v1-dependencies-{{ checksum "yarn.lock" }}
+      - run: cd website && yarn install --ignore-engines
+      - run:
+          name: Check website yarn.lock
+          command: git diff --exit-code website/yarn.lock
+
+      - save_cache:
+          paths:
+            - website/node_modules
+            - api/node_modules
+            - /usr/local/share/.cache/yarn/v4/
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
 
       - run:
           name: Install psql
