--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,5 +49,5 @@ jobs:
           command: apt-get update && apt-get install -y postgresql-client
 
       # Run tests
-      - run: cd api && yarn && yarn test
-      - run: cd website && yarn && yarn test
+      - run: cd api && yarn test
+      - run: cd website && yarn test
