--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+# Environment variables
+.env*
+
+/node_modules
+
 # OS
 .DS_Store
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# IDEs and editors
+.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.vscode/*
