--- a/package.json
+++ b/package.json
@@ -1,8 +1,65 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "lint": "eslint --cache --cache-location node_modules/.cache/eslint --fix",
+    "lint:all": "eslint packages/*/src/**/*.{ts,tsx} --fix",
+
+    "clean": "yarn run clean:artifacts && yarn run clean:packages && yarn run clean:root",
+    "clean:artifacts": "lerna run clean --parallel",
+    "clean:packages": "lerna clean --yes",
+    "clean:root": "rimraf node_modules",
+
+    "start": "lerna run start -- --parallel",
+
+    "build": "lerna run build --concurrency=1 --stream",
+
+    "test": "lerna run test --concurrency=1 --stream",
+
+    "test:quick": "lerna run test:quick --concurrency=1 --stream",
+    "test:coverage": "lerna run test:coverage --parallel",
+    "test:watch": "lerna run test:watch --parallel",
+
+    "publish:release": "lerna publish --force-publish=* --no-push --no-git-tag-version"
+  },
   "devDependencies": {
-    "lerna": "^3.22.0"
+    "@typescript-eslint/eslint-plugin": "^2.0",
+    "@typescript-eslint/parser": "^2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-flowtype": "^4.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5",
+    "husky": "^4.2.5",
+    "lerna": "^3.22.0",
+    "lint-staged": "^10.2.9",
+    "prettier": "^2.0.5",
+    "typescript": "~3.8.2"
+  },
+  "engines": {
+    "node": "12.x",
+    "yarn": "^1.22"
+  },
+  "version": "0.0.0",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn run lint"
+    ]
   }
 }
