Updated api eslint rules to allow NestJS constructors

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "packages/*/src/**/*.{js,jsx,ts,tsx}": [
       "yarn run lint"
     ]
   }
