--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -1,4 +1,10 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "extends": "../../tsconfig.json",
+  "include": ["./src"],
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
+  "outDir": "dist",
+  "compilerOptions": {
+    "noEmit": false,
+    "strictPropertyInitialization": false
+  }
 }
