--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -1,10 +1,6 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "include": ["./src"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
-  "outDir": "dist",
-  "compilerOptions": {
-    "noEmit": false,
-    "strictPropertyInitialization": false
-  }
+  "outDir": "dist"
 }
