--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -1,37 +1,9 @@
 {
-  "compilerOptions": {
-    "module": "esnext",
-    "declaration": true,
-    "removeComments": true,
-    "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "resolveJsonModule": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
+  "extends": "../../tsconfig.json",
   "include": [
     "src"
+  ],
+  "files": [
+    "src/custom.d.ts"
   ]
 }
