--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -1,6 +1,7 @@
 {
   "rules": {
     "no-useless-constructor": "off",
-    "no-empty-function": ["error", { "allow": ["constructors"] }]
+    "no-empty-function": ["error", { "allow": ["constructors"] }],
+    "class-methods-use-this": "off"
   }
 }
