--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@reduxjs/toolkit": "^1.3",
     "@testing-library/dom": "^7.8.0",
     "@testing-library/jest-dom": "^4.2.4",
