Add `react-chartjs-2` package

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-player": "^2.3.0",
