--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
     "lodash": "^4.17.15",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
