Fix Reef entity issue and simplify deploy

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
-    "gcp-build": "npm run build",
-    "deploy": "gcloud app deploy",
+    "gcp-build": "",
+    "deploy": "yarn run build; gcloud app deploy",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "yarn run start:dev",
+    "start": "yarn run start:prod",
     "start:dev": "nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
@@ -32,6 +32,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "@types/lodash": "^4.14.156",
     "lodash": "^4.17.15",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
