Fix build config

--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -3,7 +3,10 @@
   "exclude": [
     "node_modules",
     "test",
-    "dist",
-    "**/*spec.ts"
-  ]
+    "**/*spec.ts",
+  ],
+  "compilerOptions": {
+    "noEmit": false,
+    "outDir": "dist",
+  },
 }
