--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,8 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "typeorm": "^0.2.25",
-    "typeorm-naming-strategies": "^1.1.0",
-    "yarn": "^1.22.4"
+    "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
