--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -3,8 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.10.2",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
         "firebase": "^6.4.2",
-        "lodash": "^4.17.15"
+        "lodash": "^4.17.15",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "3.4.1",
+        "typescript": "~3.7.2"
     },
     "devDependencies": {
         "eslint": "^6.0.1",
@@ -16,7 +29,15 @@
         "prettier": "^1.18.2"
     },
     "scripts": {
+        "start": "react-scripts start",
         "deploy:prod": "yarn build && firebase deploy --only hosting:prod-target",
         "deploy:staging": "yarn build && firebase deploy --only hosting:staging-target"
+    },
+    "browserslist": {
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
