--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -3,7 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/date-fns": "1.x",
         "@material-ui/core": "^4.10.2",
+        "@material-ui/pickers": "^3.2.10",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
@@ -11,6 +13,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "date-fns": "^2.14.0",
         "firebase": "^6.4.2",
         "lodash": "^4.17.15",
         "react": "^16.13.1",
