--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -15,10 +15,12 @@
         "@types/react-dom": "^16.9.0",
         "date-fns": "^2.14.0",
         "firebase": "^6.4.2",
+        "leaflet": "^1.6.0",
         "lodash": "^4.17.15",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hook-form": "^5.7.2",
+        "react-leaflet": "^2.7.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "typescript": "~3.7.2"
