--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
-    "gcp-build": "npm run build",
-    "deploy": "gcloud app deploy",
+    "gcp-build": "npm install yarn",
+    "deploy": "yarn run build && gcloud app deploy",
+    "deploy:staging": "yarn run build && gcloud app deploy app-staging.yaml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "yarn run start:dev",
+    "start": "yarn run start:prod",
     "start:dev": "nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
@@ -32,6 +33,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "@types/lodash": "^4.14.156",
+    "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
@@ -47,7 +50,6 @@
     "@types/jest": "24.9.0",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
-    "dotenv": "^8.2.0",
     "jest": "24.9.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
