--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -1,6 +1,12 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./src"],
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
-  "outDir": "dist"
+  "exclude": [
+    "node_modules",
+    "test",
+    "**/*spec.ts",
+  ],
+  "compilerOptions": {
+    "noEmit": false,
+    "outDir": "dist",
+  },
 }
