--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -13,6 +13,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "axios": "^0.19.2",
         "date-fns": "^2.14.0",
         "firebase": "^6.4.2",
         "leaflet": "^1.6.0",
