--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: kartoza/postgis:12.1
     restart: always
     volumes:
-      - ./db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql
     ports:
       - 54321:5432
     environment:
