--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -1,50 +1,56 @@
 {
-    "name": "survey",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@date-io/date-fns": "1.x",
-        "@material-ui/core": "^4.10.2",
-        "@material-ui/pickers": "^3.2.10",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "axios": "^0.19.2",
-        "date-fns": "^2.14.0",
-        "firebase": "^6.4.2",
-        "leaflet": "^1.6.0",
-        "lodash": "^4.17.15",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-hook-form": "^5.7.2",
-        "react-leaflet": "^2.7.0",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
-        "typescript": "~3.7.2"
-    },
-    "devDependencies": {
-        "eslint": "^6.0.1",
-        "eslint-config-airbnb": "^17.1.1",
-        "eslint-plugin-import": "^2.18.0",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-material-ui": "^1.0.1",
-        "eslint-plugin-react": "^7.14.2",
-        "prettier": "^1.18.2"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "deploy:prod": "yarn build && firebase deploy --only hosting:prod-target",
-        "deploy:staging": "yarn build && firebase deploy --only hosting:staging-target"
-    },
-    "browserslist": {
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "application-form",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/pickers": "^3.2.10",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
+    "firebase": "^6.4.2",
+    "leaflet": "^1.6.0",
+    "lodash": "^4.17.15",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
+    "react-leaflet": "^2.7.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-material-ui": "^1.0.1",
+    "eslint-plugin-react": "^7.14.2",
+    "prettier": "^1.18.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "deploy:prod": "yarn build && firebase deploy --only hosting:prod-target",
+    "deploy:staging": "yarn build && firebase deploy --only hosting:staging-target"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
