--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3.4'
 services:
   aqua-postgres:
-    image: postgres:12.2
+    image: kartoza/postgis:12.1
     restart: always
     volumes:
-      - ./db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql
     ports:
       - 54321:5432
     environment:
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
       POSTGRES_PASSWORD: '!ChangeMe!'
+
+volumes:
+  db_data:
