--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -43,7 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --ignore-path node_nodules .gitignore",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --ignore-path .gitignore",
     "precommit": "lint-staged"
   },
   "jest": {
