--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
+    "objects-to-csv": "^1.3.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "typeorm": "^0.2.25",
