--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,11 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm install yarn",
-    "deploy": "yarn run build && gcloud app deploy",
-    "deploy:staging": "yarn run build && gcloud app deploy app-staging.yaml",
+    "deploy": "cp .env.prod .env && yarn run build && gcloud app deploy",
+    "deploy:staging": "cp .env.staging .env yarn run build && gcloud app deploy app-staging.yaml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
-    "start:dev": "nodemon --config nodemon.json",
+    "start:dev": "cp .env.local .env nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
