Fix typo in staging deploy

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,7 +10,7 @@
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm install yarn",
     "deploy": "cp .env.prod .env && yarn run build && gcloud app deploy",
-    "deploy:staging": "cp .env.staging .env yarn run build && gcloud app deploy app-staging.yaml",
+    "deploy:staging": "cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env nodemon --config nodemon.json",
