Add error alerts

--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
