--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,11 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm install yarn",
-    "deploy": "yarn run build && gcloud app deploy",
-    "deploy:staging": "yarn run build && gcloud app deploy app-staging.yaml",
+    "deploy": "cp .env.prod .env && yarn run build && gcloud app deploy",
+    "deploy:staging": "cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
-    "start:dev": "nodemon --config nodemon.json",
+    "start:dev": "cp .env.local .env nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
@@ -26,9 +26,11 @@
     "typeorm": "ts-node $(yarn bin typeorm)",
     "migration:generate": "yarn typeorm migration:generate",
     "migration:run": "yarn typeorm migration:run",
-    "migration:revert": "yarn typeorm migration:revert"
+    "migration:revert": "yarn typeorm migration:revert",
+    "db:import": "babel-node -r dotenv/config -- scripts/applications.js"
   },
   "dependencies": {
+    "@babel/node": "^7.10.3",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
@@ -36,8 +38,11 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "@types/lodash": "^4.14.156",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
+    "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
@@ -52,9 +57,17 @@
     "@types/jest": "24.9.0",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
+    "babel-node": "^0.0.1-security",
+    "csv-parser": "^2.3.3",
+    "fs": "^0.0.1-security",
     "jest": "24.9.0",
+    "loglevel": "^1.6.8",
     "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
+    "pg-sql2": "^4.7.0",
     "rimraf": "^3.0.2",
+    "sql": "^0.78.0",
+    "strip-bom-stream": "^4.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.0",
     "ts-loader": "^6.2.1",
