--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -31,8 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy:prod": "yarn build && firebase deploy --only hosting:prod-target",
-    "deploy:staging": "yarn build && firebase deploy --only hosting:staging-target",
+    "deploy:prod": "cp .env.prod .env && yarn build && firebase deploy --only hosting:prod-target",
+    "deploy:staging": "cp .env.staging .env && yarn build && firebase deploy --only hosting:staging-target",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --ignore-path .gitignore"
   },
   "browserslist": {
