--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,11 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm install yarn",
-    "deploy": "cp .env.prod .env && yarn run build && gcloud app deploy",
+    "deploy:prod": "cp .env.prod .env && yarn run build && gcloud app deploy",
     "deploy:staging": "cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
-    "start:dev": "cp .env.local .env nodemon --config nodemon.json",
+    "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
@@ -40,7 +40,6 @@
     "@types/lodash": "^4.14.156",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
-    "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
