--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -44,7 +44,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --ignore-path .gitignore",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "deploy:prod": "dotenv -e .env.prod yarn build && firebase deploy --only hosting:prod-target",
+    "deploy:staging": "dotenv -e .env.staging yarn build && firebase deploy --only hosting:staging-target"
   },
   "jest": {
     "snapshotSerializers": [
