--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "^4.14.156",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "hashids": "^2.2.1",
     "lodash": "^4.17.15",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
