Use geotiff and kickstart coordinate utils

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,5 +3,8 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "module": "commonjs"
-  }
+  },
+  "files": [
+    "src/custom.d.ts"
+  ]
 }
