Added utility to hash/unhash urls to/from ids

--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -18,6 +18,14 @@
           }
         ]
       }
+    },
+    {
+      "files": [
+        "scripts/*"
+      ],
+      "rules": {
+        "no-console": "off"
+      }
     }
   ]
 }
