Added custom global validation pipe to extend the default options available, created pipe to automatically translate id hashes to id params

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "module": "commonjs"
+    "module": "commonjs",
+    "target": "es6"
   }
 }
