--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -24,7 +24,13 @@
         "scripts/*"
       ],
       "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
       }
     }
   ]
