Clean up Application Form for Deployment (#45)
Co-authored-by: Eric Boucher <eric.p.boucher@gmail.com>

--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -18,6 +18,20 @@
           }
         ]
       }
+    },
+    {
+      "files": [
+        "scripts/*"
+      ],
+      "rules": {
+        "no-console": "off",
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
     }
   ]
 }
