--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,7 +17,7 @@
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -27,7 +27,13 @@
     "migration:generate": "yarn typeorm migration:generate",
     "migration:run": "yarn typeorm migration:run",
     "migration:revert": "yarn typeorm migration:revert",
-    "db:import": "babel-node -r dotenv/config -- scripts/applications.js"
+    "db:import": "babel-node -r dotenv/config -- scripts/applications.js",
+    "hashId": "ts-node -r dotenv/config scripts/url-hash.ts toHash",
+    "hashId:prod": "DOTENV_CONFIG_PATH=.env.prod ts-node -r dotenv/config scripts/url-hash.ts toHash",
+    "hashId:staging": "DOTENV_CONFIG_PATH=.env.staging ts-node -r dotenv/config scripts/url-hash.ts toHash",
+    "unhashId": "ts-node -r dotenv/config scripts/url-hash.ts toId",
+    "unhashId:prod": "DOTENV_CONFIG_PATH=.env.prod ts-node -r dotenv/config scripts/url-hash.ts toId",
+    "unhashId:staging": "DOTENV_CONFIG_PATH=.env.staging ts-node -r dotenv/config scripts/url-hash.ts toId"
   },
   "dependencies": {
     "@babel/node": "^7.10.3",
@@ -38,6 +44,7 @@
     "@types/lodash": "^4.14.156",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "hashids": "^2.2.1",
     "lodash": "^4.17.15",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
@@ -66,7 +73,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.0",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "~3.8.2"
   },
