--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,8 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "gcp-build": "npm install yarn",
-    "deploy:prod": "cp .env.prod .env && yarn run build && gcloud app deploy",
-    "deploy:staging": "cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml",
+    "deploy:prod": "mv .env .env.bkp && cp .env.prod .env && yarn run build && gcloud app deploy && mv .env.bkp .env",
+    "deploy:staging": "mv .env .env.bkp && cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml && mv .env.bkp .env",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
