Add application form (#38)

--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -3,14 +3,11 @@ services:
   aqua-postgres:
     image: kartoza/postgis:12.1
     restart: always
-    volumes:
-      - db_data:/var/lib/postgresql
     ports:
       - 54321:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
       POSTGRES_PASSWORD: '!ChangeMe!'
-
-volumes:
-  db_data:
+    volumes:
+      - ./db_data:/var/lib/postgresql
