Move files under /seeds

--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -30,7 +30,7 @@
       }
     },
     {
-      "files": ["src/database/*"],
+      "files": ["src/seeds/*"],
       "rules": {
         "no-param-reassign": "off",
         "fp/no-mutation": "off",
