--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -3,7 +3,7 @@
   "exclude": [
     "node_modules",
     "test",
-    "src/database",
+    "src/seeds",
     "**/*spec.ts",
   ],
   "compilerOptions": {
