--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -43,6 +43,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/lodash": "^4.14.156",
+    "geotiff": "^1.0.0-beta.12",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "geojson": "^0.5.0",
