--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -4,5 +4,8 @@
     "emitDecoratorMetadata": true,
     "module": "commonjs",
     "target": "es6"
-  }
+  },
+  "files": [
+    "src/custom.d.ts"
+  ]
 }
