--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -43,16 +43,21 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/lodash": "^4.14.156",
-    "geotiff": "^1.0.0-beta.12",
+    "@types/moment-timezone": "^0.5.13",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
+    "geotiff": "^1.0.0-beta.12",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "superagent": "^5.3.1",
     "typeorm": "^0.2.25",
     "typeorm-naming-strategies": "^1.1.0"
   },
@@ -75,8 +80,8 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "~3.8.2",
-    "typeorm-seeding": "^1.6.1"
+    "typeorm-seeding": "^1.6.1",
+    "typescript": "~3.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
