Add homepage reef table

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,6 +30,7 @@
     "firebase-tools": "^8.4.3",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
+    "material-table": "^1.65.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
