Add a script to backfill data

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -35,7 +35,9 @@
     "unhashId:staging": "DOTENV_CONFIG_PATH=.env.staging ts-node -r dotenv/config scripts/url-hash.ts toId",
     "typeorm-seeding": "ts-node $(yarn bin typeorm-seeding)",
     "seed:config": "yarn typeorm-seeding config",
-    "seed:run": "yarn typeorm-seeding seed"
+    "seed:run": "yarn typeorm-seeding seed",
+    "daily-worker": "ts-node -r dotenv/config src/workers/dailyData.ts",
+    "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -81,7 +83,8 @@
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "yargs": "^15.4.1"
   },
   "jest": {
     "moduleFileExtensions": [
