--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,6 +27,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
+    "firebase": "^7.16.1",
     "firebase-tools": "^8.4.3",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
