diable import warning for scripts

--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -21,12 +21,7 @@
       "files": ["scripts/*"],
       "rules": {
         "no-console": "off",
-        "import/no-extraneous-dependencies": [
-          "error",
-          {
-            "devDependencies": true
-          }
-        ]
+        "import/no-extraneous-dependencies": "off"
       }
     },
     {
