--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -21,7 +21,12 @@
       "files": ["scripts/*"],
       "rules": {
         "no-console": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
       }
     },
     {
