Revamped webpack config to build Firebase cloud function for daily data update.

--- a/packages/api/.gitignore
+++ b/packages/api/.gitignore
@@ -10,3 +10,9 @@
 
 # Database
 /db_data/
+
+# Firebase Local Config
+.runtimeconfig.json
+
+# Firebase Cloud Functions Generated files
+cloud-functions/dist/*.js
