--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -30,6 +30,17 @@
       }
     },
     {
+      "files": ["cloud-functions/*"],
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": true
+          }
+        ]
+      }
+    },
+    {
       "files": ["src/seeds/*"],
       "rules": {
         "no-param-reassign": "off",
