--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
+    "build:cloud-functions": "webpack-cli --config cloud-functions/webpack.config.js",
     "gcp-build": "npm install yarn",
     "deploy:prod": "mv .env .env.bkp && cp .env.prod .env && yarn run build && gcloud app deploy && mv .env.bkp .env",
     "deploy:staging": "mv .env .env.bkp && cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml && mv .env.bkp .env",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
@@ -56,6 +58,7 @@
     "moment-timezone": "^0.5.31",
     "objects-to-csv": "^1.3.6",
     "pg": "^8.2.1",
+    "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "typeorm": "^0.2.25",
@@ -74,6 +77,8 @@
     "@types/supertest": "^2.0.8",
     "csv-parser": "^2.3.3",
     "faker": "^4.1.0",
+    "firebase-functions": "^3.8.0",
+    "glob": "^7.1.6",
     "jest": "24.9.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
@@ -84,6 +89,8 @@
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
     "typescript": "~3.8.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "yargs": "^15.4.1"
   },
   "jest": {
