Add readme and .env command for firebase

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,7 +12,7 @@
     "gcp-build": "npm install yarn",
     "deploy:prod": "mv .env .env.bkp && cp .env.prod .env && yarn run build && gcloud app deploy && mv .env.bkp .env",
     "deploy:staging": "mv .env .env.bkp && cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml && mv .env.bkp .env",
-    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:dailyUpdate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
@@ -77,6 +77,7 @@
     "@types/supertest": "^2.0.8",
     "csv-parser": "^2.3.3",
     "faker": "^4.1.0",
+    "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
     "glob": "^7.1.6",
     "jest": "24.9.0",
