Use .env to initialize 'firebase-admin'

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -3,4 +3,6 @@ POSTGRES_PASSWORD=!ChangeMe!
 POSTGRES_HOST=localhost
 POSTGRES_PORT=54321
 POSTGRES_DATABASE=postgres
-FIREBASE_SERVICE_ACCOUNT=/path/to/firebase.json
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
