Add basic file upload functionality

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -40,6 +40,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-hook-form": "^6.0.8",
     "react-leaflet": "^2.7.0",
     "react-player": "^2.3.0",
