--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -49,10 +49,11 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "axios": "^0.19.2",
+    "axios-retry": "^3.1.8",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "geo-tz": "^6.0.0",
     "firebase-admin": "^9.0.0",
+    "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
     "geotiff": "^1.0.0-beta.12",
     "hashids": "^2.2.1",
