Set featuredReefId with env

--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -1,8 +1,11 @@
 # Backend base URL
-REACT_APP_API_BASE_URL = 
+REACT_APP_API_BASE_URL=
 
 # Firebase
-REACT_APP_FIREBASE_API_KEY =
+REACT_APP_FIREBASE_API_KEY=
 
 # Sofar
-REACT_APP_SOFAR_API_TOKEN = 
+REACT_APP_SOFAR_API_TOKEN=
+
+# Featured Reef
+REACT_APP_FEATURED_REEF_ID=1
