Better map performance using marker clustering (#153)
Co-authored-by: Eric Boucher <eric.p.boucher@gmail.com>

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -48,6 +48,7 @@
     "firebase-tools": "^8.4.3",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
     "lodash": "^4.17.15",
     "material-table": "^1.65.0",
     "moment": "^2.27.0",
@@ -58,6 +59,7 @@
     "react-dropzone": "^11.0.3",
     "react-hook-form": "^6.0.8",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-markercluster": "^2.0.0",
     "react-material-ui-carousel": "^1.8.2",
     "react-player": "^2.3.0",
     "react-redux": "^7.2.0",
