Introduce Chart types

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -83,9 +83,9 @@
     "node": "12.x"
   },
   "devDependencies": {
-    "@types/immutable": "^3.8.7",
-    "@types/validator": "^13.1.0",
+    "@types/chart.js": "^2.9.27",
     "@types/classnames": "^2.2.10",
+    "@types/immutable": "^3.8.7",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
@@ -97,6 +97,7 @@
     "@types/react-slick": "^0.23.4",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/redux-mock-store": "^1.0.2",
+    "@types/validator": "^13.1.0",
     "canvas": "^2.6.1"
   }
 }
